
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/fab"

        app:tint="@color/white"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="#b6cbed"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/root_leyaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.monthlyBudgetingFragment.MonthlyBudgetingFragment">

        <LinearLayout
            android:id="@+id/layouttest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/vegetalesMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/vegetales"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/vegetales" />

            <ImageButton
                android:id="@+id/frutasMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/frutas"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/frutas" />

            <ImageButton
                android:id="@+id/pastasMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/pastas"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/pastas" />

            <ImageButton
                android:id="@+id/bebestiblesMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/bebestible"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/bebestibles" />
            <ImageButton
                android:id="@+id/granosMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/granos"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/granos" />
            <ImageButton
                android:id="@+id/pastelesMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/pasteles"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/pasteles" />
            <ImageButton
                android:id="@+id/panesMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/panes"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/panes" />
            <ImageButton
                android:id="@+id/carnesMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/carnes"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/carnes" />
            <ImageButton
                android:id="@+id/ingredientesMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/ingredientes"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ingredientes" />
            <ImageButton
                android:id="@+id/domesticosMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/domesticos"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/domesticos" />
            <ImageButton
                android:id="@+id/botiquinMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/botiquin"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/botiquin" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>