<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:gravity="center"


    >


    <TextView
        android:id="@+id/buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:layout_marginEnd="33dp"
        android:layout_toStartOf="@id/agregar"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/buscar" />

    <Button
        android:id="@+id/agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5c509c"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_alignParentRight="true"

        android:text="@string/agregar" />

    <ListView
        android:id="@+id/lvCarro"
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:layout_alignBottom="@id/buscar"
        android:layout_marginBottom="-467dp"
        android:ems="10"
        android:gravity="top" />

    <Button

        android:id="@+id/adAll"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#5c509c"
        android:text="@string/agregar2" />


</RelativeLayout>