<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/root_leyaut2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragments.monthlyBudgetingFragment.MonthlyBudgetingFragment">

        <LinearLayout
            android:id="@+id/layouttest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/desayunosMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/desayuno"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/desayuno" />

            <ImageButton
                android:id="@+id/almuerzosMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/almuerzo"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/almuerzo" />

            <ImageButton
                android:id="@+id/onceMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/once"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/once" />

            <ImageButton
                android:id="@+id/cenaMostrar"
                android:layout_width="325dp"
                android:layout_height="225dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/cena"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/cena" />



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
